objects/AME_project_cloud_Project_Budget__c.object
<CustomObject>
    <fields>
        <fullName>AME_project_cloud_Actual__c</fullName>
        <label>Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_CAPEX_OPEX__c</fullName>
        <label>CAPEX / OPEX</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAPEX</fullName>
                </value>
                <value>
                    <fullName>OPEX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>DOP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>UYU</fullName>
                </value>
                <value>
                    <fullName>VEF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Description__c</fullName>
        <label>Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Software Purchase</fullName>
                </value>
                <value>
                    <fullName>Software Maintenance</fullName>
                </value>
                <value>
                    <fullName>Hardware Purchase</fullName>
                </value>
                <value>
                    <fullName>Hardware Maintenance</fullName>
                </value>
                <value>
                    <fullName>T &amp; E</fullName>
                </value>
                <value>
                    <fullName>Licenses</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Project_Charter__c</fullName>
        <label>Project Charter</label>
        <referenceTo>AME_project_cloud_Project_Charter__c</referenceTo>
        <relationshipLabel>Project Budgets</relationshipLabel>
        <relationshipName>Project_Budgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Project Budgets</relationshipLabel>
        <relationshipName>Project_Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_Request_for_Project_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request for Project Change</label>
        <referenceTo>AME_project_cloud_Req_for_Project_Change__c</referenceTo>
        <relationshipLabel>Project Budgets</relationshipLabel>
        <relationshipName>Project_Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Budget</label>
    <nameField>
        <displayFormat>BU-{0000000000}</displayFormat>
        <label>Project Budget</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CCPE_ProjectBudgetProjectCharterLocked</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(
  ISNEW(),
   CCPE_Request_for_Project_Change__r.CCPE_Locked__c
)

,

AND(
  ISBLANK(CCPE_Request_for_Project_Change__c), 
  AME_project_cloud_Project_Charter__r.CCPE_Locked__c, 
  OR(
    ISCHANGED(AME_project_cloud_Description__c),
    ISCHANGED(AME_project_cloud_CAPEX_OPEX__c),
    ISCHANGED(AME_project_cloud_Budget__c),
    ISCHANGED(AME_project_cloud_Currency__c)
  )
)

,

AND(
  NOT(ISBLANK(CCPE_Request_for_Project_Change__c)),
  CCPE_Request_for_Project_Change__r.CCPE_Locked__c,
  OR(
    ISCHANGED(AME_project_cloud_Description__c),
    ISCHANGED(AME_project_cloud_CAPEX_OPEX__c),
    ISCHANGED(AME_project_cloud_Budget__c),
    ISCHANGED(AME_project_cloud_Currency__c)
  )
)
)</errorConditionFormula>
        <errorMessage>This Project Charter for this Project is either pending approval or has already been approved; therefore, Project Budgets cannot be created or edited.  To create or edit the Project Budget, either submit a Request for Project Change or unlock the Charter.</errorMessage>
    </validationRules>
</CustomObject>